feat: mocked out some basic endpoints to hit
